--- a/ConflictCubeTest/packages.config
+++ b/ConflictCubeTest/packages.config
@@ -3,7 +3,7 @@
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net461" />
   <package id="NAudio" version="1.8.3" targetFramework="net461" />
-  <package id="NUnit.ConsoleRunner" version="3.7.0" targetFramework="net461" />
+  <package id="NUnit" version="3.8.1" targetFramework="net461" />
   <package id="OpenTK" version="3.0.0-pre" targetFramework="net461" />
   <package id="Zenseless" version="0.3.5" targetFramework="net461" />
 </packages>
