--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,21 @@ language: csharp
 sudo: required
 dist: trusty
 solution: ConflictCube.sln
+branches:
+  only:
+    - master
+    - develop
+    - TravisCiTests
 
 install:
   - travis_retry nuget restore -source "https://www.nuget.org/api/v2" ./ConflictCube.sln
   - sudo nuget update -self
   - sudo nuget restore ConflictCube.sln
+  - glxinfo | grep "OpenGL version"
+  - sudo add-apt-repository ppa:ubuntu-x-swat/updates
+  - sudo apt update
+  - sudo apt dist-upgrade
+  - glxinfo | grep "OpenGL version"
 
 script:
   - sudo msbuild ./ConflictCube.sln
