Added virtual frame buffer to run mesa-utils

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ install:
   - travis_retry nuget restore -source "https://www.nuget.org/api/v2" ./ConflictCube.sln
   - sudo nuget update -self
   - sudo nuget restore ConflictCube.sln
+  - sudo apt-get install Xvfb
+  - sudo Xvfb :1 -screen 0 1600x1200x32
   - sudo apt-get install mesa-utils
   - glxinfo | grep "OpenGL version"
   - sudo add-apt-repository ppa:ubuntu-x-swat/updates
