--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ install:
   - travis_retry nuget restore -source "https://www.nuget.org/api/v2" ./ConflictCube.sln
   - sudo nuget update -self
   - sudo nuget restore ConflictCube.sln
-  - sudo apt-get install Xvfb
+  - sudo apt-get update
+  - apt-cache search xvfb
+  - sudo apt-get install xvfb
   - sudo Xvfb :1 -screen 0 1600x1200x32
   - sudo apt-get install mesa-utils
   - glxinfo | grep "OpenGL version"
