Moved the xvfb task into the background otherwise it blocks the build

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - sudo nuget restore ConflictCube.sln
   - sudo apt-get update
   - export DISPLAY=':99.0'
-  - Xvfb :99 -screen 0 1024x768x24
+  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
   - sudo Xvfb :1 -screen 0 1600x1200x32
   - sudo apt-get install mesa-utils
   - glxinfo | grep "OpenGL version"
