--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ install:
   - sudo nuget update -self
   - sudo nuget restore ConflictCube.sln
   - sudo apt-get update
-  - sudo export DISPLAY=':99.0'
-  - sudo Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+  - export DISPLAY=':99.0'
+  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
   - sudo apt-get install mesa-utils
   - sudo glxinfo | grep "OpenGL version"
   - sudo add-apt-repository ppa:ubuntu-x-swat/updates -y
