--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
   apt:
     packages:
       - xvfb
+      - apt-transport-https
 
 install:
   - travis_retry nuget restore -source "https://www.nuget.org/api/v2" ./ConflictCube.sln
@@ -23,8 +24,8 @@ install:
   - sudo apt-get install mesa-utils
   - sudo glxinfo | grep "OpenGL version"
   - sudo add-apt-repository ppa:ubuntu-x-swat/updates -y
-  - sudo apt-get update -y -m
-  - sudo apt-get dist-upgrade -y -m
+  - sudo apt-get update -y
+  - sudo apt-get dist-upgrade -y
   - sudo glxinfo | grep "OpenGL version"
 
 script:
