--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ branches:
 addons:
   apt:
     sources:
-      - 
+      - ppa:fossfreedom/packagefixes
     packages:
       - xvfb
       - apt-transport-https
