--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
   - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
   - sudo apt-get install mesa-utils
   - sudo glxinfo | grep "OpenGL version"
-  - sudo add-apt-repository ppa:oibaf/graphics-drivers
+  - sudo add-apt-repository ppa:oibaf/graphics-drivers -y
   - sudo apt-get update -y
   - sudo apt-get upgrade -y
   - sudo apt-get dist-upgrade -y
