--- a/.travis.yml
+++ b/.travis.yml
@@ -26,9 +26,10 @@ install:
   - sudo apt-get install mesa-utils
   - sudo glxinfo | grep "OpenGL version"
   - sudo add-apt-repository ppa:oibaf/graphics-drivers -y
-  - sudo apt-get update -y
-  - sudo apt-get upgrade -y
-  - sudo apt-get dist-upgrade -y
+  - sudo apt-mark hold postgresql*
+  - sudo apt-get update -y -m
+  - sudo apt-get upgrade -y -m
+  - sudo apt-get dist-upgrade -y -m
   - sudo glxinfo | grep "OpenGL version"
 
 script:
