--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
   - sudo apt-mark hold postgresql-9.3 postgresql-contrib-9.3 postgresql-9.4 postgresql-contrib-9.4 postgresql-9.5 postgresql-contrib-9.5 postgresql-9.6 postgresql-contrib-9.6
   - sudo apt-get update -y -m
   - sudo apt-get upgrade -y -m
-  - sudo apt-get dist-upgrade -y -m
+  #- sudo apt-get dist-upgrade -y -m
   - sudo glxinfo | grep "OpenGL version"
 
 script:
