OpenGl tests only locally. Introduced Test cateogry OpenGlTests which will be excluded in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,32 +8,12 @@ branches:
     - develop
     - TravisCiTests
 
-addons:
-  apt:
-    sources:
-      - sourceline: "ppa:fossfreedom/packagefixes"
-    packages:
-      - xvfb
-      - apt-transport-https
 
 install:
   - travis_retry nuget restore -source "https://www.nuget.org/api/v2" ./ConflictCube.sln
   - sudo nuget update -self
   - sudo nuget restore ConflictCube.sln
-  - sudo apt-get update
-  - export DISPLAY=':99.0'
-  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-  - sudo apt-get install mesa-utils
-  - sudo glxinfo | grep "OpenGL version"
-  - sudo add-apt-repository ppa:oibaf/graphics-drivers -y
-  - sudo apt-mark hold postgresql-9.3 postgresql-contrib-9.3 postgresql-9.4 postgresql-contrib-9.4 postgresql-9.5 postgresql-contrib-9.5 postgresql-9.6 postgresql-contrib-9.6
-  - sudo apt-get update -y -m
-  - sudo apt-get upgrade -y -m
-  - sudo apt-get install mesa-common-dev mesa-common-dev-lts-quantal mesa-common-dev-lts-raring mesa-common-dev-lts-saucy mesa-utils-extra mesa-vdpau-drivers mesa-vdpau-drivers-dbg
-  
-  #- sudo apt-get dist-upgrade -y -m
-  - sudo glxinfo | grep "OpenGL version"
 
 script:
   - sudo msbuild ./ConflictCube.sln
-  - sudo mono ./packages/NUnit.ConsoleRunner.3.7.0/tools/nunit3-console.exe ./ConflictCubeTest/bin/Debug/ConflictCubeTest.dll
+  - sudo mono ./packages/NUnit.ConsoleRunner.3.7.0/tools/nunit3-console.exe ./ConflictCubeTest/bin/Debug/ConflictCubeTest.dll /exclude:OpenGlTests
