Tilesets can now be instanziated generically. Player Tileset can be loaded easily

--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Model\Renderable\RenderableLayer.cs" />
     <Compile Include="Model\Renderable\RenderableObject.cs" />
     <Compile Include="Model\Tiles\Tiles.cs" />
+    <Compile Include="Model\Tiles\Tileset.cs" />
     <Compile Include="View\GameView.cs" />
     <Compile Include="Model\Level\LevelBuilder.cs" />
     <Compile Include="View\MyWindow.cs" />
