--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Model\Level\Level.cs" />
     <Compile Include="Controller\GameController.cs" />
     <Compile Include="Model\GameState.cs" />
+    <Compile Include="Model\Renderable\Player.cs" />
     <Compile Include="Model\Renderable\Floor.cs" />
     <Compile Include="Model\Renderable\RenderableLayer.cs" />
     <Compile Include="Model\Renderable\RenderableObject.cs" />
