Fixxed a bug. Floor size now affects the floor again. Added FindStartPosition. The current approach is simple but might be enough

--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -76,9 +76,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\IInputManager.cs" />
+    <Compile Include="Model\InputManager.cs" />
     <Compile Include="Model\Level\Level.cs" />
     <Compile Include="Controller\GameController.cs" />
     <Compile Include="Model\GameState.cs" />
+    <Compile Include="Model\Renderable\Moveable.cs" />
     <Compile Include="Model\Renderable\Player.cs" />
     <Compile Include="Model\Renderable\Floor.cs" />
     <Compile Include="Model\Renderable\RenderableLayer.cs" />
