--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -83,8 +83,9 @@
     <Compile Include="Model\Level\Level.cs" />
     <Compile Include="Controller\GameController.cs" />
     <Compile Include="Model\GameState.cs" />
+    <Compile Include="Model\Renderable\BoxMover.cs" />
     <Compile Include="Model\Renderable\FloorLoader.cs" />
-    <Compile Include="Model\Renderable\Moveable.cs" />
+    <Compile Include="Model\Renderable\IMoveable.cs" />
     <Compile Include="Model\Renderable\Player.cs" />
     <Compile Include="Model\Renderable\Floor.cs" />
     <Compile Include="Model\Renderable\RenderableLayer.cs" />
