--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,28 +52,25 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Zenseless.Application, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.5\lib\net46\Zenseless.Application.dll</HintPath>
+      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.Application.dll</HintPath>
     </Reference>
     <Reference Include="Zenseless.Base, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.5\lib\net46\Zenseless.Base.dll</HintPath>
+      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.Base.dll</HintPath>
     </Reference>
-    <Reference Include="Zenseless.Geometry, Version=0.2.0.17727, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.5\lib\net46\Zenseless.Geometry.dll</HintPath>
+    <Reference Include="Zenseless.Geometry, Version=0.2.0.3901, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.Geometry.dll</HintPath>
     </Reference>
     <Reference Include="Zenseless.HLGL, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.5\lib\net46\Zenseless.HLGL.dll</HintPath>
+      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.HLGL.dll</HintPath>
     </Reference>
     <Reference Include="Zenseless.OpenGL, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.5\lib\net46\Zenseless.OpenGL.dll</HintPath>
+      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.OpenGL.dll</HintPath>
     </Reference>
     <Reference Include="Zenseless.ShaderDebugging, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.5\lib\net46\Zenseless.ShaderDebugging.dll</HintPath>
+      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.ShaderDebugging.dll</HintPath>
     </Reference>
     <Reference Include="Zenseless.Sound, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.5\lib\net46\Zenseless.Sound.dll</HintPath>
-    </Reference>
-    <Reference Include="Zenseless.TimeTools, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.5\lib\net46\Zenseless.TimeTools.dll</HintPath>
+      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.Sound.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
