Added UI layer and added the PlayerUI class. No text can be rendered right now, will come in future lectures, thus we wait for these lectures

--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Model\Renderable\RenderableObject.cs" />
     <Compile Include="Model\Objects\Tiles\Tiles.cs" />
     <Compile Include="Model\Objects\Tiles\Tileset.cs" />
+    <Compile Include="Model\UI\PlayerUI.cs" />
     <Compile Include="View\GameView.cs" />
     <Compile Include="View\MyWindow.cs" />
     <Compile Include="View\OpenTKWrapper.cs" />
