--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -35,8 +35,8 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NAudio, Version=1.8.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\NAudio.1.8.3\lib\net35\NAudio.dll</HintPath>
+    <Reference Include="NAudio, Version=1.8.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NAudio.1.8.4\lib\net35\NAudio.dll</HintPath>
     </Reference>
     <Reference Include="OpenTK, Version=3.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenTK.3.0.0-pre\lib\net20\OpenTK.dll</HintPath>
@@ -52,25 +52,25 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Zenseless.Application, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.Application.dll</HintPath>
+      <HintPath>..\packages\Zenseless.0.3.126\lib\net46\Zenseless.Application.dll</HintPath>
     </Reference>
     <Reference Include="Zenseless.Base, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.Base.dll</HintPath>
+      <HintPath>..\packages\Zenseless.0.3.126\lib\net46\Zenseless.Base.dll</HintPath>
     </Reference>
-    <Reference Include="Zenseless.Geometry, Version=0.2.0.3901, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.Geometry.dll</HintPath>
+    <Reference Include="Zenseless.Geometry, Version=0.2.0.7490, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Zenseless.0.3.126\lib\net46\Zenseless.Geometry.dll</HintPath>
     </Reference>
     <Reference Include="Zenseless.HLGL, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.HLGL.dll</HintPath>
+      <HintPath>..\packages\Zenseless.0.3.126\lib\net46\Zenseless.HLGL.dll</HintPath>
     </Reference>
     <Reference Include="Zenseless.OpenGL, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.OpenGL.dll</HintPath>
+      <HintPath>..\packages\Zenseless.0.3.126\lib\net46\Zenseless.OpenGL.dll</HintPath>
     </Reference>
     <Reference Include="Zenseless.ShaderDebugging, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.ShaderDebugging.dll</HintPath>
+      <HintPath>..\packages\Zenseless.0.3.126\lib\net46\Zenseless.ShaderDebugging.dll</HintPath>
     </Reference>
     <Reference Include="Zenseless.Sound, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zenseless.0.3.11\lib\net46\Zenseless.Sound.dll</HintPath>
+      <HintPath>..\packages\Zenseless.0.3.126\lib\net46\Zenseless.Sound.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -145,8 +145,6 @@
   <ItemGroup>
     <None Include="Resources\Player.gif" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ComponentBased\Model\Collision\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
