--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -77,10 +77,16 @@
     <Compile Include="ComponentBased\Controller\GameController.cs" />
     <Compile Include="ComponentBased\Controller\InputKey.cs" />
     <Compile Include="ComponentBased\Controller\ViewModel.cs" />
+    <Compile Include="ComponentBased\FontResources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FontResources.resx</DependentUpon>
+    </Compile>
     <Compile Include="ComponentBased\Model\Components\Colliders\CollisionGroup.cs" />
     <Compile Include="ComponentBased\Model\Components\GameCallbacks.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\Game.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\GhostPlayer.cs" />
+    <Compile Include="ComponentBased\Model\Components\Objects\PlayerInventory.cs" />
     <Compile Include="ComponentBased\Model\Components\Scene\SceneBuilder.cs" />
     <Compile Include="ComponentBased\Model\Components\Material\MaterialData.cs" />
     <Compile Include="ComponentBased\Model\Components\Material\Materials.cs" />
@@ -92,12 +98,14 @@
     <Compile Include="ComponentBased\Model\Components\GameObjectType.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\Boundary.cs" />
     <Compile Include="ComponentBased\Model\Components\UI\Canvas.cs" />
+    <Compile Include="ComponentBased\Model\Components\UI\Font.cs" />
     <Compile Include="ComponentBased\Model\Components\UI\PlayerUI.cs" />
     <Compile Include="ComponentBased\Levels.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Levels.resx</DependentUpon>
     </Compile>
+    <Compile Include="ComponentBased\Model\Components\UI\TextField.cs" />
     <Compile Include="ComponentBased\Program.cs" />
     <Compile Include="ComponentBased\TexturResource.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -109,6 +117,7 @@
     <Compile Include="ComponentBased\View\GameView.cs" />
     <Compile Include="ComponentBased\View\MyWindow.cs" />
     <Compile Include="ComponentBased\View\OpenTKWrapper.cs" />
+    <Compile Include="ComponentBased\View\ZenselessWrapper.cs" />
     <Compile Include="GlobalMethods\Input.cs" />
     <Compile Include="GlobalMethods\Time.cs" />
     <Compile Include="ComponentBased\Model\Components\Colliders\BoxCollider.cs" />
@@ -128,6 +137,10 @@
     <None Include="Resources\Level2.csv" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ComponentBased\FontResources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>FontResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="ComponentBased\Levels.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Levels.Designer.cs</LastGenOutput>
@@ -146,6 +159,11 @@
   <ItemGroup>
     <None Include="Resources\Player.gif" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\Font1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Blood Bath 2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
