--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -80,6 +80,8 @@
     <Compile Include="ComponentBased\Model\Components\Colliders\CollisionGroup.cs" />
     <Compile Include="ComponentBased\Model\Components\GameCallbacks.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\GhostPlayer.cs" />
+    <Compile Include="ComponentBased\Model\Components\Objects\PlayerArea.cs" />
+    <Compile Include="ComponentBased\Model\Components\Scene\Camera.cs" />
     <Compile Include="ComponentBased\Model\Components\Scene\SceneBuilder.cs" />
     <Compile Include="ComponentBased\Model\Components\Material\MaterialData.cs" />
     <Compile Include="ComponentBased\Model\Components\Material\Materials.cs" />
