Added GamePad controlls and renewed control input. Gamepad and Keyboard keys can now be used simultaniously, except the axes.

--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -120,6 +120,7 @@
     <Compile Include="ComponentBased\View\MyWindow.cs" />
     <Compile Include="ComponentBased\View\OpenTKWrapper.cs" />
     <Compile Include="ComponentBased\View\ZenselessWrapper.cs" />
+    <Compile Include="GlobalMethods\GamePadStateExtensionMethods.cs" />
     <Compile Include="GlobalMethods\Input.cs" />
     <Compile Include="GlobalMethods\Time.cs" />
     <Compile Include="ComponentBased\Model\Components\Colliders\BoxCollider.cs" />
