Camera added. More problems with the transform.... Fix it after the play testing. Level boundaries for now changed per hand to fit level0. Level1 or 2 will not workgit flow feature start Camera!

--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -93,7 +93,6 @@
     <Compile Include="ComponentBased\Model\Components\Objects\GhostPlayer.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\Pickable.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\PlayerArea.cs" />
-    <Compile Include="ComponentBased\Model\Components\Scene\Camera.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\PlayerInventory.cs" />
     <Compile Include="ComponentBased\Model\Components\Scene\SceneBuilder.cs" />
     <Compile Include="ComponentBased\Model\Components\Material\MaterialData.cs" />
@@ -122,6 +121,7 @@
     </Compile>
     <Compile Include="ComponentBased\Model\Tilesets.cs" />
     <Compile Include="ComponentBased\Model\GameState.cs" />
+    <Compile Include="ComponentBased\View\Camera.cs" />
     <Compile Include="ComponentBased\View\GameView.cs" />
     <Compile Include="ComponentBased\View\MyWindow.cs" />
     <Compile Include="ComponentBased\View\OpenTKWrapper.cs" />
