Added feature. Added that colliders can ignore collisions with specific collision types (Player <-> Player). More than one material can be rendered on one object.

--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -196,5 +196,8 @@
   <ItemGroup>
     <None Include="Resources\FloorTileset.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Textures\UseFieldIndicator.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
