--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -91,6 +91,9 @@
     <Compile Include="ComponentBased\Model\Components\Colliders\CollisionGroup.cs" />
     <Compile Include="ComponentBased\Model\Components\Colliders\CollisionLayer.cs" />
     <Compile Include="ComponentBased\Model\Components\GameCallbacks.cs" />
+    <Compile Include="ComponentBased\Model\Components\Objects\Button.cs" />
+    <Compile Include="ComponentBased\Model\Components\Objects\Events\Event.cs" />
+    <Compile Include="ComponentBased\Model\Components\Objects\Events\OnButtonChangeFloorEvent.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\Game.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\GhostPlayer.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\Players\OrangePlayer.cs" />
@@ -140,13 +143,20 @@
     <Compile Include="ComponentBased\Model\Components\Material\Material.cs" />
     <Compile Include="ComponentBased\Model\Components\Transform\Transform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShaderResources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ShaderResources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
     <None Include="Resources\FireIceFirstTest.csv" />
+    <None Include="Resources\FireIceFourthTest.csv" />
     <None Include="Resources\FireIceSecondTest.csv" />
+    <None Include="Resources\FireIceThirdTest.csv" />
     <None Include="Resources\Level0.csv" />
     <None Include="Resources\level1.csv" />
     <None Include="Resources\Level2.csv" />
@@ -168,6 +178,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>InventoryResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="ShaderResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ShaderResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\FloorSpriteSheet.png" />
@@ -185,6 +199,10 @@
     <None Include="Resources\Blood Bath 2.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\XShiftTest.csv" />
+    <None Include="Resources\XYShiftTest.csv" />
+    <None Include="Resources\YShiftTest.csv" />
+    <None Include="Shaders\Aftershadow.glsl" />
     <None Include="Textures\Sledgehammer.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -198,6 +216,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Textures\UseFieldIndicator.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Textures\Swap.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
