--- a/ConflictCubeTest/ConflictCubeTest.csproj
+++ b/ConflictCubeTest/ConflictCubeTest.csproj
@@ -50,6 +50,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="Zenseless.Application, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Zenseless.0.3.5\lib\net46\Zenseless.Application.dll</HintPath>
     </Reference>
