--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -78,12 +78,13 @@
     <Compile Include="ComponentBased\Controller\InputKey.cs" />
     <Compile Include="ComponentBased\Controller\ViewModel.cs" />
     <Compile Include="ComponentBased\DebugGame.cs" />
-    <Compile Include="ComponentBased\FontResources.Designer.cs">
+    <Compile Include="ComponentBased\Model\Components\Objects\Players\UseField.cs" />
+    <Compile Include="ResxFiles\FontResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>FontResources.resx</DependentUpon>
     </Compile>
-    <Compile Include="ComponentBased\InventoryResources.Designer.cs">
+    <Compile Include="ResxFiles\InventoryResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>InventoryResources.resx</DependentUpon>
@@ -109,20 +110,25 @@
     <Compile Include="ComponentBased\Model\Components\Objects\Floor.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\FloorLoader.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\Players\Player.cs" />
-    <Compile Include="ComponentBased\Model\Components\Objects\Tiles\FloorTile.cs" />
+    <Compile Include="ComponentBased\Model\Components\Objects\Tiles\LevelTile.cs" />
     <Compile Include="ComponentBased\Model\Components\GameObjectType.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\Boundary.cs" />
     <Compile Include="ComponentBased\Model\Components\UI\Canvas.cs" />
     <Compile Include="ComponentBased\Model\Components\UI\Font.cs" />
     <Compile Include="ComponentBased\Model\Components\UI\PlayerUI.cs" />
-    <Compile Include="ComponentBased\Levels.Designer.cs">
+    <Compile Include="ResxFiles\Levels.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Levels.resx</DependentUpon>
     </Compile>
     <Compile Include="ComponentBased\Model\Components\UI\TextField.cs" />
     <Compile Include="ComponentBased\Program.cs" />
-    <Compile Include="ComponentBased\TexturResource.Designer.cs">
+    <Compile Include="ResxFiles\LevelsWithNewTileset.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LevelsWithNewTileset.resx</DependentUpon>
+    </Compile>
+    <Compile Include="ResxFiles\TexturResource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>TexturResource.resx</DependentUpon>
@@ -144,7 +150,7 @@
     <Compile Include="ComponentBased\Model\Components\Material\Material.cs" />
     <Compile Include="ComponentBased\Model\Components\Transform\Transform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShaderResources.Designer.cs">
+    <Compile Include="ResxFiles\ShaderResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ShaderResources.resx</DependentUpon>
@@ -155,31 +161,37 @@
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
     <None Include="Resources\FireIceFirstTest.csv" />
+    <None Include="Resources\FireIceFirstTestNewTileset.tmx" />
     <None Include="Resources\FireIceFourthTest.csv" />
     <None Include="Resources\FireIceSecondTest.csv" />
+    <None Include="Resources\FireIceSecondTestNewTileset.tmx" />
     <None Include="Resources\FireIceThirdTest.csv" />
     <None Include="Resources\Level0.csv" />
     <None Include="Resources\level1.csv" />
     <None Include="Resources\Level2.csv" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ComponentBased\FontResources.resx">
+    <EmbeddedResource Include="ResxFiles\FontResources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>FontResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="ComponentBased\Levels.resx">
+    <EmbeddedResource Include="ResxFiles\Levels.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Levels.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="ComponentBased\TexturResource.resx">
+    <EmbeddedResource Include="ResxFiles\LevelsWithNewTileset.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>LevelsWithNewTileset.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ResxFiles\TexturResource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>TexturResource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="ComponentBased\InventoryResources.resx">
+    <EmbeddedResource Include="ResxFiles\InventoryResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>InventoryResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="ShaderResources.resx">
+    <EmbeddedResource Include="ResxFiles\ShaderResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ShaderResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
@@ -220,6 +232,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Textures\Swap.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Textures\SpritesheetNewTextures.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Textures\Fireman.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
