--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -80,6 +80,8 @@
     <Compile Include="ComponentBased\Controller\ViewModel.cs" />
     <Compile Include="ComponentBased\DebugGame.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\Players\UseField.cs" />
+    <Compile Include="ComponentBased\Model\Components\UI\ButtonGroup.cs" />
+    <Compile Include="ComponentBased\Model\Components\UI\DoActionOnButtonClick.cs" />
     <Compile Include="ComponentBased\Model\Components\UI\GameOverScreen.cs" />
     <Compile Include="ResxFiles\FontResources.Designer.cs">
       <AutoGen>True</AutoGen>
