Fixxed WonScreen apperance. Now it is not possible anymore to jump twice in one frame. Refactored some code into interfaces to help capsulation. Refactored player to hold less code. Added OnLateUpdate() which will called on every game object after all OnUpdates() were called. GameObjects now must specify a parent on creation, if the parent is null the GO will be stored in a root GO list, which is static in the GameObject class. Fixxed bug, that players could move even if the level was finished.

--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -79,11 +79,17 @@
     <Compile Include="ComponentBased\Controller\InputKey.cs" />
     <Compile Include="ComponentBased\Controller\ViewModel.cs" />
     <Compile Include="ComponentBased\DebugGame.cs" />
+    <Compile Include="ComponentBased\Model\Components\Objects\GameManager.cs" />
+    <Compile Include="ComponentBased\Model\Components\Objects\IGameManager.cs" />
+    <Compile Include="ComponentBased\Model\Components\Objects\ISwitchPlayers.cs" />
+    <Compile Include="ComponentBased\Model\Components\Objects\PlayerSwitcher.cs" />
     <Compile Include="ComponentBased\Model\Components\Objects\Players\UseField.cs" />
     <Compile Include="ComponentBased\Model\Components\UI\ButtonGroup.cs" />
     <Compile Include="ComponentBased\Model\Components\UI\DoActionOnButtonClick.cs" />
     <Compile Include="ComponentBased\Model\Components\UI\GameWonScreen.cs" />
     <Compile Include="ComponentBased\Model\Components\UI\GameOverScreen.cs" />
+    <Compile Include="ComponentBased\Model\IBuildMenu.cs" />
+    <Compile Include="ComponentBased\Model\IBuildScene.cs" />
     <Compile Include="ResxFiles\FontResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
