Levels now need at least 3 layers to work (Floor, Buttons, Cubes). Changed old levels to meet this criteria. Buttons can now be added as layers after these like Button0, Button1 or whatever name. Fixxed ChangeFloorTile.

--- a/ConflictCube/ConflictCube.csproj
+++ b/ConflictCube/ConflictCube.csproj
@@ -213,6 +213,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\level1.csv" />
+    <None Include="Resources\level1.tmx" />
     <None Include="Resources\Level1Left.csv" />
     <None Include="Resources\Level1Middle.csv" />
     <None Include="Resources\Level1Right.csv" />
@@ -220,6 +221,7 @@
     <None Include="Resources\Level2Left.csv" />
     <None Include="Resources\Level2Middle.csv" />
     <None Include="Resources\Level2Right.csv" />
+    <None Include="Resources\level3.tmx" />
     <None Include="Resources\Tileset.png" />
   </ItemGroup>
   <ItemGroup>
@@ -232,6 +234,7 @@
     <None Include="Resources\Blood Bath 2.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\tutlevel.tmx" />
     <None Include="Resources\XShiftTest.csv" />
     <None Include="Resources\XShiftTest.tmx" />
     <None Include="Resources\XYShiftTest.csv" />
